refactor: 모든 String 객체 검증을 isBlank()로 변경
- trim().isEmpty() 검증을 isBlank()로 통일
- 더 간결하고 효율적인 String 검증 구현
- Java 11+ 표준 사용으로 일관성 향상
- 수정된 파일: ChatDomainService, Message, User, Pet, Notification 등 16개 파일