@@ -42,10 +42,10 @@ public class Notification {
         if (status == null) {
             throw new IllegalArgumentException("NotificationStatus must not be null");
         }
-        if (title == null || title.trim().isEmpty()) {
+        if (title == null || title.isBlank()) {
             throw new IllegalArgumentException("Title must not be null or empty");
         }
-        if (content == null || content.trim().isEmpty()) {
+        if (content == null || content.isBlank()) {
             throw new IllegalArgumentException("Content must not be null or empty");
         }
         if (createdAt == null) {
