@@ -248,10 +248,10 @@ public class NotificationDomainService {
         if (userId == null) {
             throw new IllegalArgumentException("UserId must not be null");
         }
-        if (title == null || title.trim().isEmpty()) {
+        if (title == null || title.isBlank()) {
             throw new IllegalArgumentException("Title must not be null or empty");
         }
-        if (content == null || content.trim().isEmpty()) {
+        if (content == null || content.isBlank()) {
             throw new IllegalArgumentException("Content must not be null or empty");
         }
     }
